renaming examples and adding einstein example

--- a/src/data_analysis.ipynb
+++ b/src/data_analysis.ipynb
@@ -10,20 +10,69 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df2 = pd.read_csv('../build_release/old_centroid.log')\n",
-    "plt.plot(df2['Iteration'], df2['Error'])\n",
+    "# to output a logfile, compile the program with -DLOGGING_ENABLED=TRUE\n",
+    "logfiles = ['../examples/gradient8x8.log', '../examples/rings.log', '../examples/einstein.log']\n",
     "\n",
-    "df = pd.read_csv('../build_release/iterations.log')\n",
-    "plt.plot(df['Iteration'], df['Error'])\n",
+    "for logfile in logfiles:\n",
+    "    df = pd.read_csv(logfile)\n",
+    "    plt.plot(df['Iteration'], df['Error'])\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Surface Error')\n",
     "plt.title('Surface Error over Iterations')\n",
     "plt.xlim(0, None)\n",
     "# plt.ylim(1e-20, None)\n",
-    "plt.yscale('log')\n",
-    "# plt.xscale('symlog')\n",
+    "# plt.yscale('log')\n",
+    "plt.xscale('symlog', linthresh=100)\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c71c3b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quick and dirty converter for pgm files data region\n",
+    "a = \"\"\"55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "55\n",
+    "\"\"\"\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "b = a.split('\\n')\n",
+    "l = math.isqrt(len(b))\n",
+    "c = [ [ f\"{int(b[i*l+j]):>3}\" for j in range(0, l) ] for i in range(0, l)]\n",
+    "\n",
+    "d = [ ' '.join(ci) for ci in c ]\n",
+    "e = '\\n'.join(d)\n",
+    "\n",
+    "print(e)\n",
+    "\n"
    ]
   }
  ],
